# Backhaul-Profit-Maximization-Problem

./: README.md
Local-Search/: .gitignore  Algorithm.cpp  Algorithm.h  CMakeLists.txt  Parameters.h  README.md  Randomize.cpp  Randomize.h  main.cpp  path.cpp  path.h  randomize_main.cpp  readData.cpp  readData.h  run_script_deterministic.sh  run_script_disturb.sh  run_script_random.sh  run_script_roulette.sh  sparse_test_maker.cpp  test_maker.sh
Local-Search/data-analysis/: performance-profile-all.py  performance-profile.py  pivotChartGenerator-randomizedAlgo.py  pivotChartGenerator.py
Local-Search/data_files/BPMP_Data_Files/: optimalProfit.csv
Local-Search/data_files/BPMP_Data_Files/10_nodes/: t10_01_data.txt  t10_02_data.txt  t10_03_data.txt  t10_04_data.txt  t10_05_data.txt
Local-Search/data_files/BPMP_Data_Files/20_nodes/: t20_01_data.txt  t20_02_data.txt  t20_03_data.txt  t20_04_data.txt  t20_05_data.txt
Local-Search/example-results/greedy-algo/disturb-numOfNode-0.7-7-3000ms/: 10_nodes.csv  20_nodes.csv
Local-Search/shortest-path/: CMakeLists.txt  Shortest_path.cpp  Shortest_path.h  main.cpp  sparse_test_maker.cpp  test_maker.sh
Triples-Heuristic/: BPMP.mod  TriplesHeuristic.run  TriplesHeuristic.txt  example_output.txt  readme.txt
